# game-theory

./: GAMES.md  README.md  game.ipynb  pyproject.toml
prisoners-game/: README.md  docker-compose.yml
prisoners-game/backend/: Dockerfile  README.md  main.py
prisoners-game/frontend/: Dockerfile  README.md
